--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,125 @@
 // This is where you can import other stylesheets or write your scss code
 @import "../../node_modules/bootstrap/scss/bootstrap";
+
+$colorone: #016690;
+
+nav ul {
+
+    list-style-type: none;
+    text-align: end;
+   
+    li {
+        display: inline-flex;
+        padding: 20px;
+        color: $colorone;
+
+    }   
+    
+    
+}
+
+
+
+   .hero {
+
+
+    background-image: url(../images/header.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+
+}
+
+h1 {
+
+    text-align: center;
+    padding-top: 40px;
+    font-weight: bold;
+}
+
+
+
+.container1 {
+
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  
+    
+}
+
+section {
+
+    background-color: #e0ddb2;
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    flex-basis: 700px;
+    border-radius: 5px;
+    
+    div {
+
+        padding: 5px;
+    }
+
+    p{
+
+        line-height: 1em;
+    }
+    
+}
+
+
+.container2 {
+
+    display: grid;
+    grid: 1fr/1fr 2fr 1fr;
+
+    aside {
+
+        border: #dad6ab 1px solid;
+        border-radius:5px;
+        padding: 10px;
+
+    }
+
+    article {
+
+        padding: 10px;
+    }
+  
+    
+}
+
+footer ul {
+
+    text-align: center;
+    background-color: blue;
+    
+    li {
+        display: inline-block;
+        padding: 20px;
+        color: rgb(255, 255, 255);
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .container2 {
+      display: block;
+    }
+
+    .container1 {
+        display: flex;
+
+        section {
+            background-color: rgb(212, 212, 158);
+            display: block;
+            padding: 10px;
+            margin: 10px;
+            flex-basis: 200px;
+            border-radius: 5px
+         }
+
+        
+      }
+  }
