--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,13 +4,22 @@
 $colorone: #016690;
 
 nav ul {
+    position: fixed;
+    background: #ffffff;
+    display: flex;
+    height: 10vh;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+
 
     list-style-type: none;
-    text-align: end;
+    // text-align: end;
    
     li {
-        display: inline-flex;
+        // display: inline-flex;
         padding: 20px;
+       
         color: $colorone;
 
     }   
@@ -22,18 +31,17 @@ nav ul {
 
    .hero {
 
-
     background-image: url(../images/header.jpg);
     background-position: center;
     background-size: cover;
-    height: 400px;
+    height: 600px;
 
 }
 
 h1 {
-
+    
     text-align: center;
-    padding-top: 40px;
+    padding-top: 200px;
     font-weight: bold;
 }
 
@@ -104,8 +112,34 @@ footer ul {
 }
 
 @media only screen and (max-width: 768px) {
+
+    nav ul {
+        position: fixed;
+        background: #ffffff;
+        display: flex;
+        height: 10vh;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+    
+    
+        list-style-type: none;
+        // text-align: end;
+       
+        li {
+            // display: inline-flex;
+            padding: 20px;
+           
+            color: $colorone;
+    
+        }   
+        
+        
+    }
+
     .container2 {
       display: block;
+      margin: 20px;
     }
 
     .container1 {
